--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1 class="text-center mt-5 mb-5 text-primary"> LunalaApp Stocks Management</h1>
-
+    <!-- Medicine CRUD -->
     <div class="container">
         <div class="card">
             <div class="card-body">
@@ -49,26 +49,36 @@
     </div>
 
     <!-- Animal CRUD -->
-    <section>
-        <h2>Animals</h2>
-        <form method="post" action="/animals">
-            <label for="animal">Animal:</label>
-            <input type="text" name="animal" required>
-            <label for="breed">Breed:</label>
-            <input type="text" name="breed" required>
-            <button type="submit">Add Animal</button>
-        </form>
-
-        <ul>
-            {% for animal in animals %}
-                <li>
-                    {{ animal.animal }} - Breed: {{ animal.breed }} 
-                    <a href="/delete_animal/{{ animal.id }}">Delete</a>
-                    <a href="/update_animal/{{ animal.id }}">Update</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </section>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <section>
+                    <h2>Animals</h2>
+                    <form method="post" action="/animals">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <label for="animal">Animal:</label>
+                                <input type="text" class="form-control mb-3" name="animal" required>
+                            </div>
+                            <div class="col">
+                                <label for="Breed">Breed:</label>
+                                <input type="text" class="form-control mb-3" name="breed" required>
+                            </div>
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary mb-3 mt-4">Add Animal</button>
+                                <a href="{{ url_for('all_animals') }}" class="btn btn-secondary mb-3 mt-4">View All</a>
+                            </div>
+                        </div>    
+                    </form>
+                </section>
+                <script>
+                    function showAlert() {
+                        alert('Animal added successfully!');
+                    }
+                </script>  
+            </div>
+        </div>
+    </div>
     <!-- FoodStocks CRUD -->
     <section>
         <h2>Food Stocks</h2>
