--- a/templates/update_food.html
+++ b/templates/update_food.html
@@ -1,16 +1,55 @@
-<h2>Update Food</h2>
-<form method="post" action="{{ url_for('update_food', id=food.id) }}">
-    <label for="brand">Brand:</label>
-    <input type="text" name="brand" value="{{ food.brand }}" required>
-    <label for="stock">Stock:</label>
-    <input type="text" name="stock" value="{{ food.stock }}" required>
-    <label for="due_date">Due Date:</label>
-    <input type="date" name="due_date" value="{{ food.due_date.strftime('%Y-%m-%d') }}" required>
-    <label for="animal_id">Animal:</label>
-    <select name="animal_id" required>
-        {% for animal in animals %}
-            <option value="{{ animal.id }}" {% if animal.id == food.animal_id %}selected{% endif %}>{{ animal.animal }}</option>
-        {% endfor %}
-    </select>
-    <button type="submit">Update Food</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LunalaApp</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- CSS-->
+</head>
+<body>
+
+    <h1 class="text-center mt-5 mb-5 text-primary"> Food Stocks </h1>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <section>
+                    <h2>Update Food</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <form method="post" action="{{ url_for('update_food', id=food.id) }}" onsubmit="showAlert()">
+                                <label for="brand">Brand:</label>
+                                <input type="text" name="brand" value="{{ food.brand }}" required>
+                                <label for="stock">Stock:</label>
+                                <input type="text" name="stock" value="{{ food.stock }}" required>
+                                <label for="due_date">Due Date:</label>
+                                <input type="date" name="due_date" value="{{ food.due_date.strftime('%Y-%m-%d') }}" required>
+                                <label for="animal_id">Animal:</label>
+                                <select name="animal_id" required>
+                                    {% for animal in animals %}
+                                        <option value="{{ animal.id }}" {% if animal.id == food.animal_id %}selected{% endif %}>{{ animal.animal }}</option>
+                                    {% endfor %}
+                                </select>
+                                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <button type="submit" class="btn btn-primary mb-3 mt-4">Save</button>
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+                    <a href="{{ url_for('all_food') }}" class="btn btn-primary mb-3 mt-4">Back to All Food</a>
+                </section>
+                <script>
+                    function showAlert() {
+                        alert('Food updated successfully!');
+                    }
+                </script>                
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
+
+
