[STYLE] Adding css backgraound new img

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://img.freepik.com/premium-photo/large-group-cats-dogs-looking-camera-blue-background_191971-28558.jpg'); 
+    background-image: url('https://www.trentondaily.com/wp-content/uploads/2022/11/dogs.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
